added behind the pipeline

--- a/nlp/behind-the-pipeline.ipynb
+++ b/nlp/behind-the-pipeline.ipynb
@@ -4,7 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Bias and Limitations of Transformer Models"
+    "# NLP Course Chapter 2\n",
+    "\n",
+    "## Behind the Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# using PyTorch\n",
+    "\n",
+    "from transformers import pipeline"
    ]
   },
   {
@@ -13,9 +26,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from transformers import pipeline\n",
+    "classifier = pipeline(\"sentiment-analysis\")\n",
     "\n",
-    "unmasker = pipeline(\"fill-mask\", model = \"bert-base-uncased\")"
+    "classifier(\n",
+    "    [\n",
+    "        \"I've been waiting for a Hugging Face course my whole life.\",\n",
+    "        \"I hate this so much.\",\n",
+    "    ]\n",
+    ")"
    ]
   },
   {
@@ -24,11 +42,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result = unmasker(\"This man works as a [MASK].\")\n",
-    "print([r[\"token_str\"] for r in result])\n",
+    "from transformers import AutoTokenizer\n",
     "\n",
-    "result = unmasker(\"This woman works as a [MASK].\")\n",
-    "print([r[\"token_str\"] for r in result])"
+    "checkpoint = \"distilbert-base-uncased-finetuned-sst-2-english\"\n",
+    "tokenizer = AutoTokenizer.from_pretrained(checkpoint)"
    ]
   },
   {
